# mab_ms

./: .gitignore  LICENSE  README.md  imToMov.sh
deform_control/bullet_helpers/: CMakeLists.txt  package.xml
deform_control/bullet_helpers/include/bullet_helpers/: bullet_eigen_conversions.hpp  bullet_internal_conversions.hpp  bullet_math_helpers.hpp  bullet_pretty_print.hpp  bullet_ros_conversions.hpp
deform_control/bullet_helpers/src/: bullet_eigen_conversions.cpp  bullet_internal_conversions.cpp  bullet_math_helpers.cpp  bullet_pretty_print.cpp  bullet_ros_conversions.cpp
deform_control/deform_simulator/: CMakeLists.txt  package.xml
deform_control/deform_simulator/include/custom_scene/: custom_scene.h  gripper_kinematic_object.h  internal_utils.hpp  manual_gripper_path.h
deform_control/deform_simulator/include/simulation/: SetColorsVisitor.h  basicobjects.h  bullet_io.h  config_bullet.h  config_scene.h  config_viewer.h  environment.h  plotting.h  recording.h  rope.h  simplescene.h  softbodies.h
deform_control/deform_simulator/include/utils/: config.h  helper_functions.h  my_assert.h  util.h
deform_control/deform_simulator/launch/: deform_simulator.launch
deform_control/deform_simulator/nodes/: CMakeLists.txt  custom_scene_node.cpp
deform_control/deform_simulator/src/: CMakeLists.txt
deform_control/deform_simulator/src/custom_scene/: CMakeLists.txt  custom_scene.cpp  gripper_kinematic_object.cpp  manual_gripper_path.cpp
deform_control/deform_simulator/src/simulation/: CMakeLists.txt  basicobjects.cpp  bullet_io.cpp  config_bullet.cpp  config_scene.cpp  config_viewer.cpp  convexdecomp.cpp  environment.cpp  plotting.cpp  recording.cpp  rope.cpp  simplescene.cpp  softbodies.cpp
deform_control/deform_simulator/src/utils/: CMakeLists.txt  config.cpp  util.cpp  vector_io.cpp
deform_control/external_libs/OpenSceneGraph-2.8.5/: CMakeLists.txt  package.xml
deform_control/external_libs/OpenSceneGraph-2.8.5/CMakeModules/: FindOpenThreads.cmake.disable  OsgMacroUtils.cmake
deform_control/external_libs/OpenSceneGraph-2.8.5/include/OpenThreads/: Atomic
deform_control/external_libs/OpenSceneGraph-2.8.5/include/osg/: Config  Math
deform_control/external_libs/OpenSceneGraph-2.8.5/include/osgAnimation/: Interpolator  Skeleton
deform_control/external_libs/OpenSceneGraph-2.8.5/src/: CMakeLists.txt
deform_control/external_libs/OpenSceneGraph-2.8.5/src/osg/: BufferObject.cpp  CMakeLists.txt  ImageStream.cpp  State.cpp
deform_control/external_libs/OpenSceneGraph-2.8.5/src/osgAnimation/: CMakeLists.txt  Skeleton.cpp
deform_control/external_libs/OpenSceneGraph-2.8.5/src/osgDB/: CMakeLists.txt
deform_control/external_libs/OpenSceneGraph-2.8.5/src/osgFX/: CMakeLists.txt
deform_control/external_libs/OpenSceneGraph-2.8.5/src/osgGA/: CMakeLists.txt
deform_control/external_libs/OpenSceneGraph-2.8.5/src/osgIntrospection/: CMakeLists.txt
deform_control/external_libs/OpenSceneGraph-2.8.5/src/osgManipulator/: CMakeLists.txt
deform_control/external_libs/OpenSceneGraph-2.8.5/src/osgParticle/: CMakeLists.txt
deform_control/external_libs/OpenSceneGraph-2.8.5/src/osgPlugins/: CMakeLists.txt
deform_control/external_libs/OpenSceneGraph-2.8.5/src/osgShadow/: CMakeLists.txt  MinimalShadowMap.cpp
deform_control/external_libs/OpenSceneGraph-2.8.5/src/osgSim/: CMakeLists.txt  Version.cpp
deform_control/external_libs/OpenSceneGraph-2.8.5/src/osgTerrain/: CMakeLists.txt
deform_control/external_libs/OpenSceneGraph-2.8.5/src/osgText/: CMakeLists.txt
deform_control/external_libs/OpenSceneGraph-2.8.5/src/osgUtil/: CMakeLists.txt
deform_control/external_libs/OpenSceneGraph-2.8.5/src/osgViewer/: CMakeLists.txt  ViewerBase.cpp
deform_control/external_libs/bullet-2.79/: CMakeLists.txt  package.xml
deform_control/external_libs/bullet-2.79/Demos/: CMakeLists.txt
deform_control/external_libs/bullet-2.79/Extras/glui/: CMakeLists.txt
deform_control/external_libs/bullet-2.79/src/: CMakeLists.txt
deform_control/external_libs/haptics/: CMakeLists.txt  package.xml
deform_control/external_libs/haptics/src/: UDPSocket.cpp  thread_socket_interface.cpp
deform_control/external_libs/osgBullet-2.0/: CMakeLists.txt  package.xml
deform_control/external_libs/osgBullet-2.0/osgbCollision/: GLDebugDrawer.cpp  GLDebugDrawer.h
deform_control/external_libs/osgBullet-2.0/osgbDynamics/: RigidBody.cpp
deform_control/external_libs/osgWorks-2.0/: CMakeLists.txt  package.xml
deform_control/external_libs/osgWorks-2.0/osgwTools/: LODCreationNodeVisitor.h  Transform.h  TransparencyUtils.h
smmap/: CMakeLists.txt  package.xml
smmap/cmake/modules/: FindGUROBI.cmake
smmap/include/smmap/: adaptive_jacobian_model.h  deformable_model.h  diminishing_rigidity_model.h  grippers.hpp  gurobi_solvers.h  jacobian_model.h  kalman_filter_multiarm_bandit.hpp  least_squares_jacobian_model.h  optimization.hpp.disable  planner.h  robot_interface.hpp  ros_communication_helpers.hpp  task.h  task_function_pointer_types.h  task_specification.h  task_specification_implementions.hpp  timing.hpp  trajectory.hpp  ucb_multiarm_bandit.hpp  visualization_tools.h
smmap/launch/: cloth_cylinder_params.launch  cloth_table_params.launch  cloth_wafr_params.launch  colab_folding_params.launch  generic_experiment.launch  rope_cylinder_params.launch
smmap/nodes/: smmap_test_node.cpp
smmap/scripts/: create_screenshots_cloth_wafr.sh  generic_trials.py  run_trial.py  wafr_trials.py
smmap/src/: adaptive_jacobian_model.cpp  deformable_model.cpp  diminishing_rigidity_model.cpp  gurobi_solvers.cpp  jacobian_model.cpp  least_squares_jacobian_model.cpp  planner.cpp  robot_interface.cpp  task.cpp  task_specification.cpp  visualization_tools.cpp
smmap_msgs/: CMakeLists.txt  package.xml
smmap_msgs/action/: TestGrippersPoses.action
smmap_msgs/include/smmap_msgs/: messages.h
smmap_msgs/msg/: ConfidenceStamped.msg  PointCloud.msg  SimulatorFeedback.msg  VectorPose.msg
smmap_msgs/src/: messages.cpp
smmap_msgs/srv/: ExecuteGripperMovement.srv  GetFreeSpaceGraph.srv  GetGripperCollisionReport.srv  GetMirrorLine.srv
(+44 files in other folders)
