<?xml version="1.0"?>
<package>
  <name>smmap</name>
  <version>0.0.1</version>
  <description>The Simultaneous Manipulation, Model Building, and Planning package</description>

  <maintainer email="dale.mcconachie@ssengineering.ca">Dale McConachie</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>arc_utilities</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>kinematics_toolbox</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>smmap_msgs</build_depend>
  <build_depend>smmap_experiment_params</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>arc_utilities</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>kinematics_toolbox</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>smmap_msgs</run_depend>
  <run_depend>smmap_experiment_params</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
