<?xml version="1.0"?>
<package>
  <name>bullet_helpers</name>
  <version>0.0.1</version>
  <description>The bullet_helpers package</description>

  <maintainer email="dale.mcconachie@ssengineering.ca">Dale McConachie</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>osg_bullet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>arc_utilities</build_depend>
 
  <run_depend>osg_bullet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>arc_utilities</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
