<?xml version="1.0"?>
<package>
  <name>OpenSceneGraph</name>
  <version>2.8.5</version>
  <description>Catkin package for OpenSceneGraph version 2.8.5</description>
  <maintainer email="dale.mcconachie@ssengineering.ca">Dale McConachie</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
