<?xml version="1.0"?>
<package>
  <name>osg_bullet</name>
  <version>0.0.1</version>
  <description>Catkin package for OSG Bullet version 2.0</description>
  <maintainer email="dale.mcconachie@ssengineering.ca">Dale McConachie</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>bullet_physics</build_depend>
  <build_depend>osg_works</build_depend>

  <run_depend>bullet_physics</run_depend>
  <run_depend>osg_works</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
